--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -37,7 +37,8 @@
   color: var(--dark-color);
 }
 
-.navbar-sell {
+.navbar-sell,
+.navbar-driver-join {
   background-color: var(--primary-color);
   color: var(--white-color);
   padding: 5px 10px;
@@ -48,6 +49,10 @@
   display: flex;
   align-items: center;
   gap: 5px;
+}
+
+.navbar-driver-join {
+  background-color: var(--green-color);
 }
 
 .header-left a {
@@ -259,7 +264,7 @@
 }
 
 /* Media queries */
-@media (max-width: 800px) {
+@media (max-width: 910px) {
   .fixed-header,
   .header {
     height: 100px;
@@ -325,7 +330,7 @@
   }
 }
 
-@media (max-width: 410px) {
+@media (max-width: 450px) {
   .header-menu {
     padding: 0;
   }
@@ -337,6 +342,14 @@
   .user-notifications {
     width: 250px;
     left: -20px;
+  }
+
+  .header-left {
+    gap: 10px;
+  }
+  .navbar-sell,
+  .navbar-driver-join {
+    font-size: 8px;
   }
 }
 
