--- a/client/src/pages/forms/forms.css
+++ b/client/src/pages/forms/forms.css
@@ -131,13 +131,13 @@
   gap: 20px;
 }
 
-.form-group {
+.register-form-group {
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
 
-.form-group-inputs {
+.register-form-group-inputs {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -148,7 +148,7 @@
   flex-direction: column;
 }
 
-.form-input {
+.register-form-input {
   padding: 12px;
   border-radius: 4px;
   border: 1px solid var(--light-gray);
@@ -157,7 +157,7 @@
   transition: border 0.3s ease;
 }
 
-.form-input:focus {
+.register-form-input:focus {
   border: 1px solid var(--primary-color);
 }
 
