--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -112,38 +112,38 @@
   display: none;
 }
 
-.form-group {
+.settings-form-group {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
-.form-group label {
+.settings-form-group label {
   font-size: 16px;
   color: #555;
 }
 
-.form-input {
+.settings-form-input {
   padding: 10px;
   font-size: 16px;
   border: 1px solid #ddd;
   border-radius: 5px;
 }
 
-.form-bio {
+.settings-form-bio {
   height: 150px;
 }
 
-.form-input[type="file"] {
+.settings-form-input[type="file"] {
   padding: 0;
 }
 
-.form-input[type="textarea"] {
+.settings-form-input[type="textarea"] {
   height: 100px;
   resize: none;
 }
 
-.form-btn {
+.settings-form-btn {
   padding: 7px;
   font-size: 16px;
   color: white;
@@ -155,12 +155,12 @@
   font-family: var(--font-family);
 }
 
-.form-btn:hover {
+.settings-form-btn:hover {
   background-color: #219150;
 }
 
 @media (max-width: 768px) {
-  .form-bio {
+  .settings-form-bio {
     height: 100px;
   }
 }
